--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "test": "testcafe chrome tests"
   },
   "devDependencies": {
-    "testcafe": "^1.14.2"
+    "testcafe": "^1.14.2",
+    "typescript": "^3.9.9"
   }
 }
