Use config files

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "test": "testcafe chrome tests"
+    "test": "testcafe"
   },
   "devDependencies": {
     "testcafe": "^1.14.2",
