--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "scripts": {
-    "test": "testcafe"
+    "test": "testcafe",
+    "lint": "eslint tests/*.ts"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.23.0",
+    "@typescript-eslint/parser": "^4.23.0",
+    "eslint": "^7.26.0",
+    "eslint-plugin-testcafe": "^0.2.1",
     "testcafe": "^1.14.2",
     "typescript": "^3.9.9"
   }
